<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LandDataEntryActivity">

    <EditText
        android:id="@+id/crop"
        android:layout_width="123dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="223dp"
        android:layout_marginRight="223dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/KG"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/textlandtitle"
        android:layout_width="271dp"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/landTitle"
        android:textColor="@color/title_bar"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textlandtype"
        android:layout_width="149dp"
        android:layout_height="31dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="202dp"
        android:layout_marginRight="202dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/landType" />

    <Spinner
        android:id="@+id/spinnerLandType"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/textlandaddress"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="306dp"
        android:layout_marginEnd="233dp"
        android:layout_marginRight="233dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/land_address" />

    <Spinner
        android:id="@+id/spinnerLandAddress"
        android:layout_width="317dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="343dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/textlandextent"
        android:layout_width="122dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="225dp"
        android:layout_marginRight="225dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/land_extent" />

    <TextView
        android:id="@+id/textlandextent2"
        android:layout_width="122dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="518dp"
        android:layout_marginEnd="225dp"
        android:layout_marginRight="225dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/Amount" />

    <EditText
        android:id="@+id/editTextLandExtent"
        android:layout_width="123dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="453dp"
        android:layout_marginEnd="220dp"
        android:layout_marginRight="220dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/hectares"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <Spinner
        android:id="@+id/spinnerLand"
        android:layout_width="187dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="453dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:background="@color/white" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="638dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:background="@drawable/data_entry_button"
        android:text="@string/submit"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="639dp"
        android:layout_marginEnd="209dp"
        android:layout_marginRight="209dp"
        android:background="@drawable/data_entry_button"
        android:text="@string/Previous"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="126dp"
        android:layout_height="126dp"
        app:srcCompat="@drawable/emblem" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="237dp"
        android:layout_height="95dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="11dp"
        android:fontFamily="@font/raleway_bold"
        android:lineSpacingExtra="10sp"
        android:text="@string/aims_full"
        android:textSize="20sp" />

</RelativeLayout>