<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".DataEntryActivity">

...
        android:layout_marginTop="36dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/crop_category"
        app:layout_constraintBottom_toTopOf="@+id/spinnerCropCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
...
        android:layout_marginTop="10dp"
        android:layout_marginEnd="195dp"
        android:layout_marginRight="195dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/crop_name"
        app:layout_constraintBottom_toTopOf="@+id/spinnerCropName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCropCategory" />

    <TextView
        android:id="@+id/textView15"
...
        android:layout_marginTop="10dp"
        android:layout_marginEnd="189dp"
        android:layout_marginRight="189dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/crop_variety"
        app:layout_constraintBottom_toTopOf="@+id/spinnerCropVariety"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCropName" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
...
