...
    <string name="dataEntry_title">Enter Cultivated Crop Data</string>
    <string name="data_entry_image">data entry image</string>
    <string name="land_extent">Land Extent (ha)</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="hectares">   (ha)</string>
    <string name="next">Next</string>
    <string name="landTitle">Enter Cultivated Land Details</string>
    <string name="landType">Select Land Type</string>
    <string name="Previous">Previous</string>
    <string name="Land_Data">Land Data</string>
    <string name="KG">Kg</string>
    <string name="Amount">Amount</string>

    <!--    Data Entry Activity String Arrays-->

    <!--    Land Measurements-->
    <string-array name="land_measurements">
        <item>Hectares (ha)</item>
        <item>Acre</item>
        <item>Rood</item>
        <item>Perch</item>
    </string-array>

    <string name="aims_mobile">Agricultural Information Management System</string>
...
